k8s-webook-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  #  名字叫做 mysql，你也可以随便换
  name: webook-mysql
spec:
  #  方便我们调试
  type: LoadBalancer
  ports:
    #    避免冲突，我用了 3308 端口
    - port: 3308
      name: mysql
      protocol: TCP
      targetPort: 3306
  # 筛选带 app:mysql 的 pod
  selector:
    app: webook-mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
spec:
  # 筛选带 app=mysql 的 pod
  selector:
    matchLabels:
      app: webook-mysql
  #      定义 pod 的模板
  template:
    metadata:
      labels:
        #        归属于 webook 的 mysql
        app: webook-mysql
    spec:
      containers:
        - name: mysql-8
          image: mysql:8.0
          ports:
            #            默认情况下，部署的 mysql 是监听 3306 端口的
            - containerPort: 3306
              name: mysql
          #              mysql 的数据怎么存储
          volumeMounts:
            #           这两个配置的意思是，mysql 的数据存在 mysql-storage 这个持久化卷的 /mysql 目录下
#            - mountPath: /mysql
            - mountPath: /var/lib/mysql
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            #            使用 webook-mysql-pv-claim，这个 claim 里面详细描述了 mysql 所需要的卷的特性
            claimName: webook-mysql-pv-claim
