k8s-webook-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-redis
spec:
  selector:
    matchLabels:
      app: webook-redis
  template:
    metadata:
      labels:
        app: webook-redis
    spec:
      containers:
        - name: webook-redis
          image: redis:latest
          ports:
            #           Redis 都是监听 6379 的
            - containerPort: 6379

---
# 准备暴露出去给外面用
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  #  船新的 NodePort 类型
  type: NodePort
#  type: ClusterIP
  selector:
    app: webook-redis
  ports:
    - port: 6379
      #      外部访问的端口，必须是 30000-32767 之间
      nodePort: 31379
      #      pod 暴露的端口
      targetPort: 6379
